--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,14 @@
         android:layout_height="wrap_content">
 
         <EditText
+            android:id="@+id/edittext"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Input search keyword here."/>
 
         <Button
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search"/>
@@ -42,6 +44,7 @@
             android:id="@+id/loading_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:progressBarStyle"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
